[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_texture_rect.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/scaffolder/assets/fonts/pxlzr_font_m.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_button.gd" type="Script" id=3]
[ext_resource path="res://assets/images/gui/nine_patch/button_normal.png" type="Texture" id=4]
[ext_resource path="res://addons/scaffolder/src/gui/style_box_texture_scalable.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxTexture" id=11]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 8.0
content_margin_bottom = 8.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 9, 9 )
margin_left = 3.5
margin_right = 3.5
margin_top = 3.5
margin_bottom = 3.5
script = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="ScaffolderButton" type="Button"]
margin_right = 230.0
margin_bottom = 56.0
rect_min_size = Vector2( 230, 56 )
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 230.0
margin_bottom = 56.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomButton" type="Button" parent="MarginContainer"]
margin_right = 230.0
margin_bottom = 56.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 11 )
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer"]
margin_right = 230.0
margin_bottom = 56.0
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
clip_text = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
visible = false
margin_right = 230.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="ShineLineWrapper" type="Control" parent="MarginContainer/MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 224.0
margin_bottom = 50.0
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShineLine" type="Sprite" parent="MarginContainer/MarginContainer/ShineLineWrapper"]
position = Vector2( -115, 28 )

[node name="ScaffolderTextureRect" parent="MarginContainer" instance=ExtResource( 1 )]
visible = false
margin_left = 115.0
margin_top = 28.0
margin_right = 115.0
margin_bottom = 28.0

[node name="TopButton" type="Button" parent="MarginContainer"]
margin_right = 230.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="MarginContainer/TopButton" to="." method="_on_TopButton_button_down"]
[connection signal="button_up" from="MarginContainer/TopButton" to="." method="_on_TopButton_button_up"]
[connection signal="mouse_entered" from="MarginContainer/TopButton" to="." method="_on_TopButton_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/TopButton" to="." method="_on_TopButton_mouse_exited"]
[connection signal="pressed" from="MarginContainer/TopButton" to="." method="_on_TopButton_pressed"]
